--- a/src/scss/roundtable/_faq.scss
+++ b/src/scss/roundtable/_faq.scss
@@ -205,6 +205,7 @@
         & ol {
           padding-left: 24px;
           margin-bottom: 0;
+	 list-style-type: none;
 
           @include Mobile {
             padding-left: 18px;
